[OCO-21] Marketplace - Adiciona Tela de Produtos

--- a/app-marketplace/marketplace-frontend-fix/src/app/app.component.html
+++ b/app-marketplace/marketplace-frontend-fix/src/app/app.component.html
@@ -23,11 +23,11 @@
   }
 
   .fill-height {
-    min-height: calc(100vh - 60px - 163px);
+    min-height: calc(100vh - 60px - 80px);
   }
 
-  footer{
-    height: 163px;
+  .footer{
+    min-height: 80px !important;
   }
 </style>
 
@@ -58,59 +58,20 @@
 
   </div>
 
-  <div class="row mx-0 footer">
-    <footer class="bg-primary-d text-light">
-      <div class="container">
-        <!-- <div class="row g-4 py-4">
-    
-        </div> -->
-    
-        <div class="py-4">
-          <div class="row align-items-center">
-            <div class="col-6">
-              <label class="text-light me-2">Parceiros de Pagamento</label>
-    
-              <div class="btn-group bg-white-ddd">
-                <button class="btn btn-outline-primary">
-                  <a href=""><img src="../assets/images/payment/amazonpay.svg" alt=""></a>
-                </button>
-                <button class="btn btn-outline-primary">
-                  <a href=""><img src="../assets/images/payment/american-express.svg" alt=""></a>
-                </button>
-                <button class="btn btn-outline-primary">
-                  <a href=""><img src="../assets/images/payment//mastercard.svg" alt=""></a>
-                </button>
-                <button class="btn btn-outline-primary">
-                  <a href=""><img src="../assets/images/payment/paypal.svg" alt=""></a>
-                </button>
-                <button class="btn btn-outline-primary">
-                  <a href=""><img src="../assets/images/payment/visa.svg" alt=""></a>
-                </button>
-              </div>
-            </div>
-    
-            <div class="col-6">
-              <ul class="list-inline mb-0 text-lg-end text-center">
-                <li class="list-inline-item mb-2 mb-md-0">Baixe nosso App</li>
-                <li class="list-inline-item ms-4">
-                  <a href="#!"> <img src="../assets/images/appbutton/appstore-btn.svg" alt="" style="width: 140px;"></a></li>
-                <li class="list-inline-item">
-                  <a href="#!"> <img src="../assets/images/appbutton/googleplay-btn.svg" alt="" style="width: 140px;"></a></li>
-              </ul>
-            </div>
-          </div>
-        </div>
-    
-        <div class="border-top border-secondary py-4">
-          <div class="row align-items-center">
-            <div class="col-md-6">
-              <span class="small">Copyright 2023 © Ocorp.  Todos os direitos reservados.</span>
-            </div>
-          </div>
-        </div>
-    
-      </div>
-    </footer>
+  <div class="row mx-0 bg-primary text-light p-2 footer">
+    <div class="col-6 my-auto">
+      <span class="small">Copyright 2023 © Ocorp.  Todos os direitos reservados.</span>
+    </div>
+
+    <div class="col-6 my-auto">
+      <ul class="list-inline mb-0 text-lg-end text-center">
+        <li class="list-inline-item mb-2 mb-md-0">Baixe nosso App</li>
+        <li class="list-inline-item ms-4">
+          <a href="#!"> <img src="../assets/images/appbutton/appstore-btn.svg" alt="" style="width: 140px;"></a></li>
+        <li class="list-inline-item">
+          <a href="#!"> <img src="../assets/images/appbutton/googleplay-btn.svg" alt="" style="width: 140px;"></a></li>
+      </ul>
+    </div>
   </div>
 </div>
 
