--- a/app-marketplace/marketplace-frontend-fix/src/app/components/page-profiles/page-profiles.component.html
+++ b/app-marketplace/marketplace-frontend-fix/src/app/components/page-profiles/page-profiles.component.html
@@ -33,7 +33,7 @@
             <!-- Tabela -->
             <div class="row" *ngIf="data.length > 0 && !isLoading">
                 <div class="col-12 p-2 my-1">
-                    <div class="row fs-7 fw-bold text-muted">
+                    <div class="row fs-7 text-muted">
                         <div class="border-end col text-center" style="max-width: 80px;">#</div>
                         <div class="border-end col text-center text-truncate">Nome</div>
                         <div class="col text-center" style="max-width: 80px;">Ações</div>
@@ -41,7 +41,7 @@
                 </div>
 
                 <div *ngFor="let item of data" class="col-12 p-2 my-1 bg-primary-www rounded-3" >
-                    <div class="row fs-6">
+                    <div class="row fs-7">
                         <div class="border-end col text-center" style="max-width: 80px;"><b>{{item.id}}</b></div>
                         <div class="border-end col text-truncate">{{item.name}}</div>
 
