--- a/app-marketplace/marketplace-frontend-fix/src/app/components/common/navbar/navbar.component.html
+++ b/app-marketplace/marketplace-frontend-fix/src/app/components/common/navbar/navbar.component.html
@@ -1,51 +1,94 @@
-<div class="row p-0 bg-primary-d rounded-4 sdw" style="min-height:100%;">   
-    <ul class="col mt-4">
-        <li class="row">
-            <div class="col text-center">
-                <img src="../assets/Ocorp.svg" style="width: 128px;" class="my-auto">
-            </div>
-        </li>
+<div class="d-flex flex-column p-0 bg-primary-dd rounded-4 sdw" style="min-height:100%;"> 
+    <div class="col-12 text-center mt-4">
+        <img src="../assets/Ocorp.svg" style="width: 128px;" class="my-auto">
+    </div>
 
-        <li class="row mt-4 mb-4">
-            <div class="col text-center">
-                <div class="mx-auto bg-secondary rounded rounded-circle" style="width: 164px;height: 164px;">
-                    <i class="bi bi-person-fill text-white" style="line-height: 164px;font-size: 64px;"></i>
-                </div>
-            </div>
-        </li>
-
-        <li *ngIf="HasPermission(1)" class="row nav-button" (click)="GotoRoute('/users')">
-            <div class="col-2" style="text-align:right;"><i class="bi bi-person-fill"></i></div>
-            <div class="col-10">Usuarios</div>
-        </li>
-
-        <li *ngIf="HasPermission(3)" class="row nav-button" (click)="GotoRoute('/profiles')">
-            <div class="col-2" style="text-align:right;"><i class="bi bi-person-vcard-fill"></i></div>
-            <div class="col-10">Perfis</div>
-        </li>
-
-        <li *ngIf="HasPermission(5)" class="row nav-button" (click)="GotoRoute('/establishments')">
-            <div class="col-2" style="text-align:right;"><i class="bi bi-building-fill"></i></div>
-            <div class="col-10">Estabelecimentos</div>
-        </li>
-
-        <li *ngIf="HasPermission(6)" class="row nav-button" (click)="GotoRoute('/dashboard')">
-            <div class="col-2" style="text-align:right;"><i class="bi bi-bar-chart-line"></i></div>
-            <div class="col-10">Dashboard</div>
-        </li>
-
-        <li class="row nav-button" (click)="Button_Logout()">
-            <div class="col-2" style="text-align:right;"><i class="bi bi-box-arrow-left"></i></div>
-            <div class="col-10">Logout</div>
-        </li>
-    </ul>
-
-    <div class="col text-muted text-center fw-bold">
-        <div class="row align-items-end" style="min-height: 100%;">
-            <div class="col p-2">
-                Ambiente : {{ambient}}
-            </div>
+    <div class="col-12 text-center mt-4">
+        <div class="mx-auto bg-secondary rounded rounded-circle" style="width: 128px;height: 128px;">
+            <i class="bi bi-person-fill text-white" style="line-height: 128px;font-size: 64px;"></i>
         </div>
     </div>
-    
+
+    <div class="col-12 text-center text-muted mt-2" style="font-size: 12px;">
+        <label class="col-12">Pablo Andrade</label>
+        <label class="col-12">usuario@email.com</label>
+    </div>
+
+    <div class="col-12 text-center mt-2">
+        <button class="btn btn-primary me-2" style="font-size: 12px;" (click)="Button_Logout()">
+            <i class="bi bi-box-arrow-left"></i>
+            Logout
+        </button>
+
+        <button class="btn btn-primary" style="font-size: 12px;">
+            <i class="bi bi-gear-fill"></i>
+        </button>
+    </div>
+
+    <div class="col-12 mt-4">
+
+        <div *ngIf="HasPermission(1)" class="px-2 mt-1" (click)="GotoRoute('/users')">
+            <div class="nav-btn bg-primary-d">
+                <i class="bi bi-person-fill me-1 ms-2"></i>
+                Usuarios
+            </div>
+        </div>
+
+        <div *ngIf="HasPermission(3)" class="px-2 mt-1" (click)="GotoRoute('/profiles')">
+            <div class="nav-btn bg-primary-d">
+                <i class="bi bi-person-vcard-fill me-1 ms-2"></i>
+                Perfis
+            </div>
+        </div>
+
+        <div *ngIf="HasPermission(5)" class="px-2 mt-1" (click)="GotoRoute('/establishments')">
+            <div class="nav-btn bg-primary-d">
+                <i class="bi bi-shop me-1 ms-2"></i>
+                Estabelecimentos
+            </div>
+        </div>
+
+        <div *ngIf="HasPermission(6)" class="px-2 mt-1" (click)="GotoRoute('/dashboard')">
+            <div class="nav-btn bg-primary-d">
+                <i class="bi bi-bar-chart-line me-1 ms-2"></i>
+                Dashboard
+            </div>
+        </div>
+
+        <div *ngIf="HasPermission(2)" class="px-2 mt-1" (click)="GotoRoute('/products')">
+            <div class="nav-btn bg-primary-d">
+                <i class="bi bi-box-seam-fill me-1 ms-2"></i>
+                Produtos
+            </div>
+        </div>
+
+        <div class="px-2 mt-1" (click)="GotoRoute('/brands')">
+            <div class="nav-btn bg-primary-d">
+                <i class="bi bi-patch-check-fill me-1 ms-2"></i>
+                Marcas
+            </div>
+        </div>
+
+        <div class="px-2 mt-1" (click)="GotoRoute('/suplliers')">
+            <div class="nav-btn bg-primary-d">
+                <i class="bi bi-truck me-1 ms-2"></i>
+                Fornecedores
+            </div>
+        </div>
+
+        <div class="px-2 mt-1" (click)="GotoRoute('/categories')">
+            <div class="nav-btn bg-primary-d">
+                <i class="bi bi-bookmarks me-1 ms-2"></i>
+                Categorias
+            </div>
+        </div>
+
+        <div class="px-2 mt-1" (click)="GotoRoute('/batchs')">
+            <div class="nav-btn bg-primary-d">
+                <i class="bi bi-boxes me-1 ms-2"></i>
+                Lotes
+            </div>
+        </div>
+
+    </div>
 </div>
