--- a/app-marketplace/marketplace-frontend-fix/src/app/components/common/navbar/navbar.component.scss
+++ b/app-marketplace/marketplace-frontend-fix/src/app/components/common/navbar/navbar.component.scss
@@ -1,42 +1,15 @@
-.nav ul {
-    padding: 0px;
-    margin: 0px;
-    flex-direction: column;
-}
-
-.nav-button {
+.nav-btn {
     color: white;
-    padding: 10px;
+    padding: 8px;
     cursor: pointer;
+    font-size: 14px;
+    border-radius: 8px;
 }
 
-.nav-button:hover {
-    background-color: #3a618d;
+.nav-btn:hover {
+    background-color: #3a618d !important; 
 }
 
-.nav-button-sub {
-    background-color: #172738;
-    color: white;
-    padding: 10px;
-}
-
-.nav-button-sub:hover {
-    background-color: #3a618d;
-}
-
-.input-icon-ip {
-    border-radius: 10px 0px 0px 10px;
-    border-width: 1px 0px 1px 1px;
-    border-style: solid;
-    height: 37px;
-}
-
-.input-icon-i {
-    height: 37px;
-    padding: 0px;
-    margin-right: 10px;
-    border-width: 1px 1px 1px 0px;
-    border-style: solid;
-    border-radius: 0px 8px 8px 0px;
-    color: white;
+.nav-btn-active {
+    background-color: #294566 !important; 
 }
