--- a/app-marketplace/marketplace-frontend-fix/src/app/components/page-users/page-users.component.html
+++ b/app-marketplace/marketplace-frontend-fix/src/app/components/page-users/page-users.component.html
@@ -64,7 +64,7 @@
             <!-- Tabela -->
             <div class="row" *ngIf="users.length > 0 && !isLoading">
                 <div class="col-12 p-2 my-1">
-                    <div class="row fs-7 fw-bold text-muted">
+                    <div class="row fs-7 text-muted">
                         <div class="border-end col text-center" style="max-width: 80px;">#</div>
                         <div class="border-end col text-center text-truncate">Nome</div>
                         <div class="border-end col text-center text-truncate">Email</div>
@@ -77,11 +77,11 @@
                 </div>
 
                 <div *ngFor="let item of users" class="col-12 p-2 my-1 bg-primary-www rounded-3" >
-                    <div class="row fs-6">
+                    <div class="row fs-7">
                         <div class="border-end col text-center" style="max-width: 80px;"><b>{{item.id}}</b></div>
                         <div class="border-end col text-truncate">{{item.name}}</div>
                         <div class="border-end col text-truncate">{{item.email}}</div>
-                        <div class="border-end col text-truncate">{{item.phoneNumber | mask : '(00) 00000-0000'}}</div>
+                        <div class="border-end col text-center text-truncate">{{item.phoneNumber | mask : '(00) 00000-0000'}}</div>
                         <div class="border-end col text-center text-truncate">{{item.documentNumber | mask :'000.000.000-00'}}</div>
 
                         <div class="border-end col text-center" style="max-width: 120px;">
