[OCO-30] Marketplace - Adiciona Tela de marcas

--- a/app-marketplace/marketplace-frontend-fix/src/app/components/common/navbar/navbar.component.html
+++ b/app-marketplace/marketplace-frontend-fix/src/app/components/common/navbar/navbar.component.html
@@ -25,7 +25,14 @@
         </button>
     </div>
 
-    <div class="col-12 mt-4">
+    <div class="col-12 mt-4" style="max-height: 246px;overflow-x: auto;">
+
+        <div *ngIf="HasPermission(6)" class="px-2 mt-1" (click)="GotoRoute('/dashboard')">
+            <div class="nav-btn bg-primary-d">
+                <i class="bi bi-bar-chart-line me-1 ms-2"></i>
+                Dashboard
+            </div>
+        </div>
 
         <div *ngIf="HasPermission(1)" class="px-2 mt-1" (click)="GotoRoute('/users')">
             <div class="nav-btn bg-primary-d">
@@ -45,13 +52,6 @@
             <div class="nav-btn bg-primary-d">
                 <i class="bi bi-shop me-1 ms-2"></i>
                 Estabelecimentos
-            </div>
-        </div>
-
-        <div *ngIf="HasPermission(6)" class="px-2 mt-1" (click)="GotoRoute('/dashboard')">
-            <div class="nav-btn bg-primary-d">
-                <i class="bi bi-bar-chart-line me-1 ms-2"></i>
-                Dashboard
             </div>
         </div>
 
