--- a/app-marketplace/marketplace-frontend-fix/src/app/components/common/pagination/pagination.component.html
+++ b/app-marketplace/marketplace-frontend-fix/src/app/components/common/pagination/pagination.component.html
@@ -9,7 +9,7 @@
 
 <div class="row align-items-end p-2">
 
-    <div class="col-3 my-auto fs-6" *ngIf="(totalItems != 0)">
+    <div class="col-3 my-auto fs-7" *ngIf="(totalItems != 0)">
         <div class="row">
             <div class="col-6 my-auto p-0 text-end">
                 <label>Items : &nbsp;</label>
@@ -36,13 +36,14 @@
                 </button>
             </ng-container>
             
-
-            <button *ngFor="let pageItem of pageList" 
-                class="btn btn-outline-primary me-1 btn-pgn" 
-                [ngClass]="{'active': pageItem == this.page}" 
-                (click)="Button_Page(pageItem)">
-                    {{pageItem}}
-            </button>
+            <ng-container *ngIf="totalPages != 1">
+                <button *ngFor="let pageItem of pageList" 
+                    class="btn btn-outline-primary me-1 btn-pgn" 
+                    [ngClass]="{'active': pageItem == this.page}" 
+                    (click)="Button_Page(pageItem)">
+                        {{pageItem}}
+                </button>
+            </ng-container>
             
             <ng-container *ngIf="(page != totalPages) && (totalItems != 0)">
                 <button class="btn btn-outline-secondary me-1 btn-pgn" (click)="Button_Next()" type="button">
@@ -55,7 +56,7 @@
         </div>  
     </div>
 
-    <div class="col-3 text-end my-auto" *ngIf="(itemsPerPage!=0) && (totalItems != 0)">
+    <div class="col-3 text-end my-auto fw-light fs-7" *ngIf="(itemsPerPage!=0) && (totalItems != 0)">
         <label><b>Página {{page}} de {{totalPages}}</b></label>
     </div> 
 
