--- a/app-marketplace/marketplace-frontend-fix/src/app/components/page-users/modals/modal-user-register/modal-user-register-internal.component.html
+++ b/app-marketplace/marketplace-frontend-fix/src/app/components/page-users/modals/modal-user-register/modal-user-register-internal.component.html
@@ -61,6 +61,12 @@
                         </option>
                     </select>
                 </div>
+
+                <div class="col-6">
+                    <label for="birthdayDate" class="required">Data de nascimento</label>
+                    <input id="birthdayDate" [(ngModel)]="data.birthdayDate" type="date"
+                        class="form-control" placeholder="Digite sua data de nascimento ..." (change)="ValidateField('birthdayDate')">
+                </div>
             </div>
         </div>
     </div>
