--- a/app-marketplace/marketplace-frontend-fix/src/app/components/common/searchfield/searchfield.component.html
+++ b/app-marketplace/marketplace-frontend-fix/src/app/components/common/searchfield/searchfield.component.html
@@ -1,6 +1,6 @@
 <div class="row card mt-2 pt-2 pb-2">
     <div class="col-12">
-        <div class="row" style="font-size: 1.3em;">
+        <div class="row fs-7">
             <div class="col-6">
                 <i class="bi bi-funnel-fill"></i> 
                 Filtros
@@ -14,7 +14,7 @@
         </div>
     </div>
     
-    <div *ngIf="collapse" class="mt-2">
+    <div *ngIf="collapse" class="mt-1">
 
         <div class="col-12">
             <div class="row">
